# nordic_medical_platform

./: .python-version  BLE_CONNECTION_STABILITY_FIXES.md  BLE_CONNECTION_SUMMARY.md  BLE_ERROR_FIXES.md  BLE_FIXES_APPLIED.md  BLE_RX_STACK_OVERFLOW_FIX.md  BUILD_FIX_IMMEDIATE_LOGGING.md  COMPLETE_SYSTEM_OVERVIEW.md  DFU_CHEATSHEET.md  Doxyfile  INSTALLATION_GUIDE.md  Makefile  PROJECT_SUMMARY.md  README.md  SHELL_INTERFERENCE_FIX.md  STACK_OVERFLOW_FIX.md  ZEPHYR_SETUP_GUIDE.md  install_zephyr.sh  install_zephyr_wsl.bat  pyproject.toml  quick_install.sh  setup_zephyr.ps1  test_dfu_build.sh
app/: CMakeLists.txt  mcuboot.conf  mcumgr_full.conf  nrf52840dk_nrf52840.overlay  prj.conf  west.yml
app/.cache/clangd/index/: main.c.67EDD67DB8F91102.idx
app/boards/arm/qemu_cortex_m4/: Kconfig.board  Kconfig.defconfig  board.cmake  qemu_cortex_m4.dts  qemu_cortex_m4.yaml  qemu_cortex_m4_defconfig
app/child_image/mcuboot/: overlay.conf
app/src/: bluetooth_dfu.c  bluetooth_dfu.h  bootloader.c  bootloader.h  button_handler.c  button_handler.h  common.h  config.c  config.h  diagnostics.c  diagnostics.c.backup  diagnostics.h  hardware.c  hardware.h  main.c  medical_device.c  medical_device.h  safe_buffer.c  safe_buffer.h  safe_queue.c  safe_queue.h  serial_comm.c  serial_comm.h  shell_commands.c  shell_commands.h  system.c  system.h  thread_manager.c  thread_manager.h
docs/: BLE_GATT_GUIDE.md  BLE_QUICK_START.md  BLE_TROUBLESHOOTING.md  DFU_BOOTING_GUIDE.md  DFU_GUIDE.md  MCUMGR_DETAILED_GUIDE.md  MCUMGR_QUICK_REFERENCE.md  QUICK_START_DFU.md  README.md  README_MCUmgr.md  (+1 more)
(+134 files in other folders)
